@@ -4,20 +4,21 @@ import org.bukkit.Material;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
 
+import java.util.Arrays;
 import java.util.List;
 
-public abstract class BBuyItem {
+public abstract class GameItem {
     private final ItemStack itemStack;
     abstract Material MATERIAL();
     abstract String NAME();
-    abstract int PRICE();
+    abstract String ABOUT();
 
-    public BBuyItem() {
+    public GameItem() {
         this.itemStack = new ItemStack(this.MATERIAL());
         ItemMeta itemMeta = this.itemStack.getItemMeta();
         if (itemMeta == null) return;
         itemMeta.setDisplayName(this.NAME());
-        itemMeta.setLore(List.of("値段:"+PRICE()));
+        itemMeta.setLore(Arrays.asList(ABOUT().split("\n")));
         this.itemStack.setItemMeta(itemMeta);
     }
 
